--- a/src/components/Map/ViewBar.css
+++ b/src/components/Map/ViewBar.css
@@ -4,6 +4,7 @@
 .view-bar {
   position: absolute;
   top: 10px;
+  left: 50%;
   transform: translateX(-50%);
   display: flex;
   flex-direction: row; /* Changed to row for better alignment */
