--- a/src/components/Map/ViewBar.css
+++ b/src/components/Map/ViewBar.css
@@ -4,7 +4,7 @@
 .view-bar {
   position: absolute;
   top: 10px;
-  left: 50%;
+  left: 5px;
   transform: translateX(-50%);
   display: flex;
   flex-direction: row; /* Changed to row for better alignment */
