--- a/src/components/Scene/SceneContainer.css
+++ b/src/components/Scene/SceneContainer.css
@@ -1,18 +1,10 @@
 /* src/components/Scene/SceneContainer.css */
 
 .scene-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  transform: translateY(100%);
-  transition: transform 0.5s ease-in-out;
-  z-index: 10; /* Ensure it appears above other elements */
-}
-
-.scene-container.visible {
-  transform: translateY(0);
+  position: relative;
+  background: #fff;
 }
 
 .scene-map {
